methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: ';' expected but 'if' found.
if (haveBaggle()) {return} else {droite();avance();gauche();if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}if (haveBaggle()) {return} else {droite();avance();gauche();}}
                                                                                                                         ^